# upnext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lv_conf.h  sdkconfig  sdkconfig.old
assets/: User_Setup.h  Weather_Icons_Flat.eps  asset_activity_cheers.afdesign  calendar.cpp  calendar.h  calendar_events.cpp  calendar_events.h  font_icon_14.c  font_lato_18.c  font_lato_24.c  meteocon.cpp  meteocon.h  upnext-google-script.gs  weather.cpp  weather.h  weather_api.h  weather_mock.hpp
components/LovyanGFX/: .piopm
include/: display.hpp  esp32_s3.h  network.h  upnext_config_sample.h
main/: CMakeLists.txt  calendar.cpp  calendar.h  calendar_ui.cpp  calendar_ui.h  forecast.cpp  forecast.h  http_client.cpp  http_client.h  lv_conf.h  main.cpp  network.cpp  network.h  weather.cpp  weather.h  weather_ui.cpp  weather_ui.h
main/assets/: asset_activity_cheers.c  asset_activity_headphones.c  asset_activity_meeting.c  asset_activity_working.c  asset_broken_clouds_day.c  asset_broken_clouds_night.c  asset_clear_sky_day.c  asset_clear_sky_night.c  asset_few_clouds_day.c  asset_few_clouds_night.c  asset_mist.c  asset_rain.c  asset_scattered_clouds.c  asset_shower_rain_day.c  asset_shower_rain_night.c  asset_snow.c  asset_thunderstorm.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/fonts/: ui_font_lato14.c  ui_font_lato18.c  ui_font_lato22.c
main/ui/images/: ui_img_asset_cheers_png.c  ui_img_asset_headphones_png.c
main/ui/screens/: ui_screen.c
